[26.January 2009]
- exit.rb: Exit#z # -> -100 (should be behind everything else)
- levels of DefaultCampaign: updated position of exit

[25.January 2009]
- exit.rb, location.rb: Exit is not a static object
- gfx/exit.png: replacement for old Exit by Magnus Nygaard
- level Arctic Tutorial: updated position of exit

[[[release 0.8] [01/24/2008] ----------------------------------------

[24.January 2009]
- freevikings.rb: added option -c to load config from non-default path
- initfv.rb, topmenu.rb: fixed problems caused by yesterday's digging in Menu
- config/config.rb: sample user's configuration file
- docs/user_manual/usermanual.xml: added chapter about configuration file
- location.rb: exit is visible again (disappeared thanks to yesterday's
  painting cleanup)
- fixes of levels before release:
  - level SwitchPlace: fixed (used to add static objects directly through
    Location#static_objects#add => static objects were invisible...)
  - entities/flyingtroll.rb: removed requirement of monster.rb
  - entities/lock.rb: Added error which deleted lock on unlocking attempt
    even if key wasn't right
  - entities/ladder.rb: Ladder is semi-solid again
  - level Climbin' : fixed Ladder-system

[23.January 2009]
- heroandmonster.rb entity.rb sprite.rb item.rb staticobject.rb activeobject.rb
  some classes moved back from SchwerEngine, because they aren't general enough
- many files: removed requirement of monster.rb (I learned some basics of 'sed'
  because of it :) )
- location.rb, zsortedgroup.rb: more efficient strategy of z-sorted painting -
  without sorting all game objects in every frame.
  Unfortunatelly it didn't bring a single fps :(
- gamestate.rb: some documentation touched; one useless state removed
- game.rb, gamestate.rb: ingame menu (restart/exit/back)

[22.January 2009]
- ability.rb: RD->RDoc
- warior.rb: arrow speed-up
- viking.rb: repeated calls of methods 'next_[left|top]' replaced with
  instance variables with values assigned once per update